RESOLVED FIXED83444
combine two arrays in SVGException.cpp into one
https://bugs.webkit.org/show_bug.cgi?id=83444
Summary combine two arrays in SVGException.cpp into one
Lu Guanqun
Reported 2012-04-08 18:12:26 PDT
combine two arrays in SVGException.cpp into one, this helps to fix one FIXME in the file.
Attachments
Patch (3.25 KB, patch)
2012-04-08 18:14 PDT, Lu Guanqun
no flags
Lu Guanqun
Comment 1 2012-04-08 18:14:09 PDT
WebKit Review Bot
Comment 2 2012-04-09 22:36:55 PDT
Comment on attachment 136166 [details] Patch Clearing flags on attachment: 136166 Committed r113680: <http://trac.webkit.org/changeset/113680>
WebKit Review Bot
Comment 3 2012-04-09 22:36:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.